# gnome-advanced-shortcuts

./: README.md  config.json.example  install.sh  meson.build
data/: de.primeapi.PrimeCuts.search-provider.ini  de.primeapi.PrimeCuts.service  primecuts.desktop
src/: command_manager.cpp  command_manager.hpp  config.hpp  config_loader.cpp  config_loader.hpp  constants.hpp  dbus_provider.cpp  dbus_provider.hpp  logger.hpp  main.cpp
